Update  to fix gaps between buttons.

--- a/dcc-webapp/src/main/dccweb/src/styles.css
+++ b/dcc-webapp/src/main/dccweb/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+
+.leftGap {
+  margin-left: 0.5rem;
+}
